Desenvolve interfaces, infra e classes/interfaces base

--- a/ApiEquipamento.Repositorio/ApiEquipamento.Repositorio.csproj
+++ b/ApiEquipamento.Repositorio/ApiEquipamento.Repositorio.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\ApiEquipamento.Dominio\ApiEquipamento.Dominio.csproj" />
+      <ProjectReference Include="..\ApiEquipamento.Infra\ApiEquipamento.Infra.csproj" />
     </ItemGroup>
 
 </Project>
