--- a/ApiEquipamento.Infra/ApiEquipamento.Infra.csproj
+++ b/ApiEquipamento.Infra/ApiEquipamento.Infra.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\ApiEquipamento.Infra\ApiEquipamento.Infra.csproj" />
+      <ProjectReference Include="..\ApiEquipamento.Dominio\ApiEquipamento.Dominio.csproj" />
     </ItemGroup>
 
 </Project>
